build working with font loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ add_executable(main src/main.cpp)
 target_link_libraries(main PRIVATE sfml-graphics)
 target_compile_features(main PRIVATE cxx_std_17)
 
+file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/bin)
+
 if(WIN32)
     add_custom_command(
         TARGET main
